src/main/java/NawkParser.java
/* Generated By:JavaCC: Do not edit this line. NawkParser.java */
import java.io.File;import java.io.FileReader;

public class NawkParser implements NawkParserConstants {
    public static void main(String[] args) {
        try {
          if (args.length == 0) {
            NawkParser parser = new NawkParser(NawkParser.class.getResourceAsStream("myawk.nawk"));
            parser.start();
          } else {
            for (String arg: args) {
              File testFile =
                      new File(arg);
              NawkParser parser = new NawkParser(new FileReader(testFile));
              parser.start();
            }
          }
        } catch (Exception e) {
            System.out.println(e.getMessage());
        }
    }

/* PARSER RULES */

// Root-Regel
  final public void start() throws ParseException {
    trace_call("start");
    try {
      prog();
      jj_consume_token(0);
    } finally {
      trace_return("start");
    }
  }

  final public void prog() throws ParseException {
    trace_call("prog");
    try {
    SymbolTable globalSt = new SymbolTable(null);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case BANG:
        case LBRACE:
        case SEMICOLON:
        case 25:
        case 26:
        case 28:
        case 29:
        case 30:
        case VOID:
        case TRUE:
        case FALSE:
        case INTEGER_LITERAL:
        case DOUBLE_LITERAL:
        case CHAR_LTIERAL:
        case Ident:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        if (jj_2_1(3)) {
          statement(globalSt);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 25:
          case 26:
          case 28:
          case 29:
          case 30:
          case VOID:
            functionDeclaration();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } finally {
      trace_return("prog");
    }
  }

/** STATEMENTS **/
  final public void statement(SymbolTable st) throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case 26:
      case 28:
      case 29:
      case 30:
        fieldDeclaration(st);
        break;
      case LBRACE:
        blockStatement(st);
        break;
      case PLUS:
      case MINUS:
      case BANG:
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case DOUBLE_LITERAL:
      case CHAR_LTIERAL:
      case Ident:
      case STRING_LITERAL:
        exprStatement(st);
        break;
      case SEMICOLON:
        emptyStatement();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

  final public void blockStatement(SymbolTable parentSt) throws ParseException {
    trace_call("blockStatement");
    try {
        SymbolTable st = new SymbolTable(parentSt);
      jj_consume_token(LBRACE);
      blockStatementContent(st);
      jj_consume_token(RBRACE);
    } finally {
      trace_return("blockStatement");
    }
  }

// Workaround, da (..)* in blockStatement nicht stehen kann, ohne dass
// javecc unreachable code erzeugt
  final public void blockStatementContent(SymbolTable st) throws ParseException {
    trace_call("blockStatementContent");
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case BANG:
        case LBRACE:
        case SEMICOLON:
        case 25:
        case 26:
        case 28:
        case 29:
        case 30:
        case TRUE:
        case FALSE:
        case INTEGER_LITERAL:
        case DOUBLE_LITERAL:
        case CHAR_LTIERAL:
        case Ident:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[3] = jj_gen;
          break label_2;
        }
        statement(st);
      }
    } finally {
      trace_return("blockStatementContent");
    }
  }

  final public void exprStatement(SymbolTable st) throws ParseException {
    trace_call("exprStatement");
    try {
      expr();
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("exprStatement");
    }
  }

  final public void emptyStatement() throws ParseException {
    trace_call("emptyStatement");
    try {
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("emptyStatement");
    }
  }

/** FIELD DECLARATION **/
  final public void type() throws ParseException {
    trace_call("type");
    try {
      primitiveType();
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
    } finally {
      trace_return("type");
    }
  }

  final public void primitiveType() throws ParseException {
    trace_call("primitiveType");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 29:
        jj_consume_token(29);
        break;
      case 30:
        jj_consume_token(30);
        break;
      case 26:
        jj_consume_token(26);
        break;
      case 25:
        jj_consume_token(25);
        break;
      case 28:
        jj_consume_token(28);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("primitiveType");
    }
  }

  final public void fieldDeclaration(SymbolTable st) throws ParseException {
    trace_call("fieldDeclaration");
    try {
      type();
      variableDeclarator();
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("fieldDeclaration");
    }
  }

  final public void variableDeclarator() throws ParseException {
    trace_call("variableDeclarator");
    try {
      variableDeclaratorId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        variableInitializer();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } finally {
      trace_return("variableDeclarator");
    }
  }

  final public void variableDeclaratorId() throws ParseException {
    trace_call("variableDeclaratorId");
    try {
      jj_consume_token(Ident);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
      }
    } finally {
      trace_return("variableDeclaratorId");
    }
  }

  final public void variableInitializer() throws ParseException {
    trace_call("variableInitializer");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
        arrayInitializer();
        break;
      case PLUS:
      case MINUS:
      case BANG:
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case DOUBLE_LITERAL:
      case CHAR_LTIERAL:
      case Ident:
      case STRING_LITERAL:
        expr();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("variableInitializer");
    }
  }

  final public void arrayInitializer() throws ParseException {
    trace_call("arrayInitializer");
    try {
      jj_consume_token(LBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
      case BANG:
      case LBRACE:
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case DOUBLE_LITERAL:
      case CHAR_LTIERAL:
      case Ident:
      case STRING_LITERAL:
        variableInitializer();
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
          variableInitializer();
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("arrayInitializer");
    }
  }

/** FUNCTION DECLARATION **/
  final public void functionDeclaration() throws ParseException {
    trace_call("functionDeclaration");
    try {
    // No Parent table, because a function can not access outer scope
    SymbolTable st = new SymbolTable(null);
      resultType();
      jj_consume_token(Ident);
      jj_consume_token(LPAREN);
      functionParameters();
      jj_consume_token(RPAREN);
      functionBlock(st);
    } finally {
      trace_return("functionDeclaration");
    }
  }

  final public void resultType() throws ParseException {
    trace_call("resultType");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case 25:
      case 26:
      case 28:
      case 29:
      case 30:
        type();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("resultType");
    }
  }

  final public void functionParameters() throws ParseException {
    trace_call("functionParameters");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
      case 26:
      case 28:
      case 29:
      case 30:
        type();
        variableDeclarator();
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[12] = jj_gen;
            break label_6;
          }
          jj_consume_token(COMMA);
          type();
          variableDeclarator();
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
    } finally {
      trace_return("functionParameters");
    }
  }

  final public void functionBlock(SymbolTable st) throws ParseException {
    trace_call("functionBlock");
    try {
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case BANG:
        case LBRACE:
        case SEMICOLON:
        case 25:
        case 26:
        case 28:
        case 29:
        case 30:
        case TRUE:
        case FALSE:
        case INTEGER_LITERAL:
        case DOUBLE_LITERAL:
        case CHAR_LTIERAL:
        case Ident:
        case STRING_LITERAL:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_7;
        }
        statement(st);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RETURN:
        jj_consume_token(RETURN);
        expr();
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("functionBlock");
    }
  }

/** EXPRESSIONS **/
  final public void expr() throws ParseException {
    trace_call("expr");
    try {
      conditionalOrExpression();
    } finally {
      trace_return("expr");
    }
  }

  final public void conditionalOrExpression() throws ParseException {
    trace_call("conditionalOrExpression");
    try {
      conditionalAndExpression();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_8;
        }
        jj_consume_token(OR);
        conditionalAndExpression();
      }
    } finally {
      trace_return("conditionalOrExpression");
    }
  }

  final public void conditionalAndExpression() throws ParseException {
    trace_call("conditionalAndExpression");
    try {
      equalityExpression();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_9;
        }
        jj_consume_token(AND);
        equalityExpression();
      }
    } finally {
      trace_return("conditionalAndExpression");
    }
  }

  final public void equalityExpression() throws ParseException {
    trace_call("equalityExpression");
    try {
      relationalExpression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQ:
        case NE:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_10;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EQ:
          jj_consume_token(EQ);
          break;
        case NE:
          jj_consume_token(NE);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        relationalExpression();
      }
    } finally {
      trace_return("equalityExpression");
    }
  }

  final public void relationalExpression() throws ParseException {
    trace_call("relationalExpression");
    try {
      additiveExpression();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case GT:
        case LT:
        case LE:
        case GE:
          ;
          break;
        default:
          jj_la1[20] = jj_gen;
          break label_11;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LT:
          jj_consume_token(LT);
          break;
        case GT:
          jj_consume_token(GT);
          break;
        case LE:
          jj_consume_token(LE);
          break;
        case GE:
          jj_consume_token(GE);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        additiveExpression();
      }
    } finally {
      trace_return("relationalExpression");
    }
  }

  final public void additiveExpression() throws ParseException {
    trace_call("additiveExpression");
    try {
      multiplicativeExpression();
      label_12:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
          ;
          break;
        default:
          jj_la1[22] = jj_gen;
          break label_12;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        multiplicativeExpression();
      }
    } finally {
      trace_return("additiveExpression");
    }
  }

  final public void multiplicativeExpression() throws ParseException {
    trace_call("multiplicativeExpression");
    try {
      unaryExpression();
      label_13:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
        case SLASH:
        case MOD:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_13;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case STAR:
          jj_consume_token(STAR);
          break;
        case SLASH:
          jj_consume_token(SLASH);
          break;
        case MOD:
          jj_consume_token(MOD);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        unaryExpression();
      }
    } finally {
      trace_return("multiplicativeExpression");
    }
  }

  final public void unaryExpression() throws ParseException {
    trace_call("unaryExpression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
      case BANG:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
          jj_consume_token(PLUS);
          break;
        case MINUS:
          jj_consume_token(MINUS);
          break;
        case BANG:
          jj_consume_token(BANG);
          break;
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      primaryExpression();
    } finally {
      trace_return("unaryExpression");
    }
  }

  final public void primaryExpression() throws ParseException {
    trace_call("primaryExpression");
    try {
      literal();
    } finally {
      trace_return("primaryExpression");
    }
  }

  final public void literal() throws ParseException {
    trace_call("literal");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      case DOUBLE_LITERAL:
        jj_consume_token(DOUBLE_LITERAL);
        break;
      case CHAR_LTIERAL:
        jj_consume_token(CHAR_LTIERAL);
        break;
      case STRING_LITERAL:
        jj_consume_token(STRING_LITERAL);
        break;
      case TRUE:
      case FALSE:
        booleanLiteral();
        break;
      case Ident:
        jj_consume_token(Ident);
        break;
      default:
        jj_la1[28] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("literal");
    }
  }

  final public void booleanLiteral() throws ParseException {
    trace_call("booleanLiteral");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
        jj_consume_token(TRUE);
        break;
      case FALSE:
        jj_consume_token(FALSE);
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("booleanLiteral");
    }
  }

  Node skipError(int kind) throws ParseException {
    trace_call("skipError");
    try {
    ParseException e = generateParseException();
    System.out.println("Hello " + e.toString());
    Token t;
    do {
        t = getNextToken();
    } while (t.kind != kind);
    return null;
    } finally {
      trace_return("skipError");
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3R_28() {
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  private boolean jj_3R_31() {
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  private boolean jj_3R_48() {
    if (!jj_rescan) trace_call("booleanLiteral(LOOKING AHEAD...)");
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(32)) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) { if (!jj_rescan) trace_return("booleanLiteral(LOOKAHEAD FAILED)"); return true; }
    }
    { if (!jj_rescan) trace_return("booleanLiteral(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_27() {
    if (!jj_rescan) trace_call("variableDeclaratorId(LOOKING AHEAD...)");
    if (jj_scan_token(Ident)) { if (!jj_rescan) trace_return("variableDeclaratorId(LOOKAHEAD FAILED)"); return true; }
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_31()) { jj_scanpos = xsp; break; }
    }
    { if (!jj_rescan) trace_return("variableDeclaratorId(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_41() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(1)) {
    jj_scanpos = xsp;
    if (jj_scan_token(2)) return true;
    }
    if (jj_3R_40()) return true;
    return false;
  }

  private boolean jj_3R_47() {
    if (jj_3R_48()) return true;
    return false;
  }

  private boolean jj_3R_22() {
    if (!jj_rescan) trace_call("variableDeclarator(LOOKING AHEAD...)");
    if (jj_3R_27()) { if (!jj_rescan) trace_return("variableDeclarator(LOOKAHEAD FAILED)"); return true; }
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) jj_scanpos = xsp;
    { if (!jj_rescan) trace_return("variableDeclarator(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_43() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(3)) {
    jj_scanpos = xsp;
    if (jj_scan_token(4)) {
    jj_scanpos = xsp;
    if (jj_scan_token(5)) return true;
    }
    }
    if (jj_3R_42()) return true;
    return false;
  }

  private boolean jj_3R_26() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  private boolean jj_3R_46() {
    if (!jj_rescan) trace_call("literal(LOOKING AHEAD...)");
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_scan_token(36)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_3R_47()) {
    jj_scanpos = xsp;
    if (jj_scan_token(38)) { if (!jj_rescan) trace_return("literal(LOOKAHEAD FAILED)"); return true; }
    }
    }
    }
    }
    }
    { if (!jj_rescan) trace_return("literal(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_18() {
    if (!jj_rescan) trace_call("fieldDeclaration(LOOKING AHEAD...)");
    if (jj_3R_21()) { if (!jj_rescan) trace_return("fieldDeclaration(LOOKAHEAD FAILED)"); return true; }
    if (jj_3R_22()) { if (!jj_rescan) trace_return("fieldDeclaration(LOOKAHEAD FAILED)"); return true; }
    if (jj_scan_token(SEMICOLON)) { if (!jj_rescan) trace_return("fieldDeclaration(LOOKAHEAD FAILED)"); return true; }
    { if (!jj_rescan) trace_return("fieldDeclaration(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_39() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(10)) {
    jj_scanpos = xsp;
    if (jj_scan_token(9)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) {
    jj_scanpos = xsp;
    if (jj_scan_token(13)) return true;
    }
    }
    }
    if (jj_3R_38()) return true;
    return false;
  }

  private boolean jj_3R_45() {
    if (!jj_rescan) trace_call("primaryExpression(LOOKING AHEAD...)");
    if (jj_3R_46()) { if (!jj_rescan) trace_return("primaryExpression(LOOKAHEAD FAILED)"); return true; }
    { if (!jj_rescan) trace_return("primaryExpression(LOOKAHEAD SUCCEEDED)"); return false; }
  }

  private boolean jj_3R_37() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(11)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) return true;
    }
    if (jj_3R_36()) return true;
    return false;
  }
